<resources>
    <string name="app_name">Unima Campus Map</string>
    <string name="map">Map</string>
    <string name="my_places">Places</string>
    <string name="look_around">Look Around</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="ar_navigation_guide">AR Navigation Guide</string>
    <string name="title_activity_drawer">Welcome</string>
    <string name="search_here">Search Here</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="service_layer_url" translatable="false">http://gisserver.domain.com:6080/arcgis/rest/services/folder/service/FeatureServer</string>
    <string name="feature_added">Feature added</string>
    <string name="error_applying_edits">Error applying edits</string>
    <string name="error_cannot_add_to_feature_table">Error cannot add to feature table</string>
    <string name="communicate">Communicate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unima_mmpk">/University of Malawi</string>
    <string name="has_transport">Routes</string>
    <string name="no_transport">No routes</string>
    <string name="has_geotag">Geotags on</string>
    <string name="no_geotag">Geotag off</string>
    <string name="chooseMap">Choose Map</string>

    <string name="export_tiles_text">Export Tiles</string>
    <string name="close_button_text">Close</string>
    <string name="preview_text">Preview</string>


    <string name="take_map_offline">Take map offline</string>
    <string name="portal_url">https://www.arcgis.com</string>
    <string name="item_id">acc027394bc84c2fb04d1ed317aac674</string>


    <string name="service_loading_message">Preparing services…</string>
    <string name="place_start_message">Tap to set a start point</string>
    <string name="place_end_message">Tap to set a destination</string>
    <string name="nav_ready_message">You\'re ready to start navigating!</string>
    <string name="navigation_start">Navigate</string>
    <string name="nav_button">Start AR</string>
    <string name="calibrate_button">Calibrate</string>
    <string name="calibration_start_message">Adjust calibration before starting</string>
    <string name="solving_route_message">Solving route…</string>
    <string name="altitude_slider_label">Altitude</string>
    <string name="heading_slider_label">Heading</string>

    <string name="elevation_url">https://elevation3d.arcgis.com/arcgis/rest/services/WorldElevation3D/Terrain3D/ImageServer</string>

    <string name="location_failed_error_message">Failed to start location service</string>
    <string name="route_failed_error_message">Failed to connect to route service</string>
    <string name="data_source_status_error">Error in DataSourceStatusChangedListener: %s</string>
    <string name="world_routing_service_url">https://route-api.arcgis.com/arcgis/rest/services/World/Route/NAServer/Route_World</string>
    <string name="location_permission_denied">Location permissions required to plan your route!</string>
    <string name="navigate_ar_permission_denied">Camera permissions are required for navigation in AR!</string>
    <string name="buildings_at_university_of_malawi">Buildings at University of Malawi</string>
    <string name="buildings">Image of building</string>

</resources>