<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  >


        <!-- "item" submenu -->
            <group>
            <item android:id="@+id/mapMenu"
                android:title="@string/map"
                android:icon="@drawable/ic_baseline_map_24"/>
            <item android:id="@+id/myPlacesMenu"
                android:title="@string/my_places"
                android:icon="@drawable/ic_baseline_my_location_24" />
            <item android:id="@+id/lookAroundMenu"
                android:title="@string/look_around"
                android:icon="@drawable/ic_baseline_view_carousel_24"/>
            <item android:id="@+id/arNavMenu"
                android:title="@string/ar_navigation_guide"
                android:icon="@drawable/ic_baseline_navigation_24" />
            <item android:id="@+id/settingsMenu"
                android:title="@string/settings"
                android:icon="@drawable/ic_baseline_settings_24" />
            </group>


</menu>