<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    tools:context=".MainActivity">

     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/mapPreviewLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="0dp"
         android:layout_marginEnd="0dp"
         android:layout_marginTop="0dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/mapView">

          <View
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black"
              app:layout_constraintRight_toLeftOf="@+id/closeButton"
              tools:layout_constraintTop_creator="1"
              tools:layout_constraintRight_creator="1"
              tools:layout_constraintBottom_creator="1"
              app:layout_constraintBottom_toBottomOf="@+id/previewMapView"
              app:layout_constraintTop_toBottomOf="@+id/previewMapView"
              tools:layout_constraintLeft_creator="1"
              app:layout_constraintLeft_toLeftOf="@+id/closeButton" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:layout_marginTop="8dp"
              android:text="@string/preview_text"
              android:textColor="@color/colorPrimary"
              android:textSize="26sp"
              tools:layout_constraintRight_creator="1"
              app:layout_constraintRight_toRightOf="parent"
              tools:layout_constraintLeft_creator="1"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintHorizontal_bias="0.494"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintBottom_toTopOf="@+id/previewMapView" />

          <com.esri.arcgisruntime.mapping.view.MapView
              android:id="@+id/previewMapView"
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:layout_marginBottom="60dp"
              android:layout_marginLeft="50dp"
              android:layout_marginRight="50dp"
              android:layout_marginTop="60dp"
              android:background="@drawable/preview_background"
              tools:layout_constraintTop_creator="1"
              tools:layout_constraintRight_creator="1"
              tools:layout_constraintBottom_creator="1"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              tools:layout_constraintLeft_creator="1"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintVertical_bias="0.0" />

          <Button
              android:id="@+id/closeButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="8dp"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:background="@android:color/transparent"
              android:text="@string/close_button_text"
              android:textColor="@color/colorPrimary"
              android:textSize="18sp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>

     <com.esri.arcgisruntime.mapping.view.MapView
         android:id="@+id/mapView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />

     <View
         android:id="@+id/previewMask"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="60dp"
         android:layout_marginEnd="52dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginStart="52dp"
         android:layout_marginTop="60dp"
         android:background="@drawable/preview_mask"
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintVertical_bias="0.0" />

     <Button
         android:id="@+id/exportTilesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/bottom_navigator"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="10dp"
         android:text="@string/export_tiles_text" />

     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:menu="@menu/menu" />


</RelativeLayout>